sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:7: error: '(' expected but '{' found.
    } else if {
              ^AlgGnomeSort:15: error: illegal start of simple expression
}
^